add teams entry for Prof. Amin

--- a/teams/_posts/2019-01-01-team-1.markdown
+++ b/teams/_posts/2019-01-01-team-1.markdown
@@ -1,11 +1,11 @@
 ---
 title: Dr
-name: Rahul Gopinath
-subtitle: CISPA, Saarland University
+name: Mohammad Amin Alipour
+subtitle: University of Houston
 layout: default
-img: gopinath.jpg
-thumbnail: gopinath.jpg
-alt: Rahul Gopinath
-website: https://rahul.gopinath.org
+img: alipour.jpg
+thumbnail: alipour.jpg
+alt: Mohammad Amin Alipour
+website: https://www.aminalipour.com/
 description: Foo bar
 ---
